UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PromotionCodeMapping__c/ftr_PromotionCodeMapping__c.object-meta.xml
<CustomObject>
    <label>ftr PromotionCodeMapping</label>
    <nameField>
        <label>ftr PromotionCode Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ftr PromotionCodeMappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>