UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PromotionCodeMapping__c/fields/SNE_Code_Term__c.field-meta.xml
<CustomField>
    <fullName>SNE_Code_Term__c</fullName>
    <label>SNE Code Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>