UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PromotionCodeMapping__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>