UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_PromotionCodeMapping__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>